tributepage/css/style.css
body {
    background-color: #555;
    font-family: "Segoe UI","Helvetica",Garuda,Arial,sans-serif;
    color: rgb(250, 250, 250);
    text-align: center;
    font-size: 1.1rem;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='296' height='296' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23444244' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23383538'%3E%3Ccircle cx='769' cy='229' r='6'/%3E%3Ccircle cx='539' cy='269' r='6'/%3E%3Ccircle cx='603' cy='493' r='6'/%3E%3Ccircle cx='731' cy='737' r='6'/%3E%3Ccircle cx='520' cy='660' r='6'/%3E%3Ccircle cx='309' cy='538' r='6'/%3E%3Ccircle cx='295' cy='764' r='6'/%3E%3Ccircle cx='40' cy='599' r='6'/%3E%3Ccircle cx='102' cy='382' r='6'/%3E%3Ccircle cx='127' cy='80' r='6'/%3E%3Ccircle cx='370' cy='105' r='6'/%3E%3Ccircle cx='578' cy='42' r='6'/%3E%3Ccircle cx='237' cy='261' r='6'/%3E%3Ccircle cx='390' cy='382' r='6'/%3E%3C/g%3E%3C/svg%3E");
}

#main {
    margin: 0 auto;
    text-align: center;
    max-width: 1200px;
    padding: 0 .5rem;
}

#tribute-person {
    background-color: #bbb;
    border-radius: 1%;
    padding: 1rem;
}

#tribute-info
{
    background-color:#ccc;
    border-radius: 1%;
    padding: 1rem;
}

#image {
    max-width: 90%;
    display: block;
    margin: 0 auto;
    border-radius: 15% 20% 10% 35%;
    box-shadow:0 2px 10px 0 rgba(0,0,0,0.16),0 8px 16px 0 rgba(0,0,0,0.12);
    transform: skewY(-5deg);
}

#video {
    margin: 0 auto;
    display: block;
    width: auto;
    min-width: 90%;
    box-shadow:0 2px 10px 0 rgba(0,0,0,0.16),0 8px 16px 0 rgba(0,0,0,0.12);
    border-radius: 3%;
}

#img-caption{
   font-style: italic;
   margin-top:10px;
   font-size: 1.2rem;
}

ul {
    margin-bottom: 14px;
    list-style: none;
}
li { 
    width: auto;
    height: auto;;
    margin: 0 auto; 
    margin-bottom: 7px;
    background-color: #aaa; 
    padding:3px;
    font-size: 1rem;
    list-style-type: none;
}

#title {
    padding:.7em;
    background-color: indigo;
}

.section {
    padding: .5em;
    background-color: indigo;
    margin-bottom: 10px;
    margin-top: 15px;
}

.infos .date {
    font-size: 1.2em;
    font-weight: 600;
    color: black;
    background-color: #eee;
    padding: 3px;
    float:left;
}

.details {
    text-align: justify;
    text-justify: inter-word;
    font-size: .9rem;
    padding:10px;
}

.headline{
    text-transform: uppercase;
    font-size: 1.2rem;
    font-weight: 900;
}

.quote {
    font-style: italic;
   margin-top:30px;
   font-size: 1.1rem;
}

.blue{ border-left: 5px solid #61A8DC; }

.indigo{ border-left: 5px solid indigo; }

.purple { border-left: 5px solid #988CC3; }


@media screen and (min-width: 468px) {

        #main {
            display: flex;
            flex-wrap: wrap;
            flex-direction: row;
        }

        #tribute-person {
            width: 35%;
            margin-bottom: 10px;
            max-height: 90vh;
            display: block;
        }

        #tribute-info {
            float:left;
            width: 55%;
            margin: 20px;
            overflow: hidden;
        }

        #image {
            width: auto;
            display: block;
            height: auto;
            max-width: 65%;
        }

}

